tests/ui/wrong_number_of_args_ref_unit.stderr
error: No scale expected for ref_unit.

  = help: Use `#[ref_unit(<ident>, "<symbol>", <si_prefix>, "<doc>")]`
or  `#[ref_unit(<ident>, "<symbol>", <si_prefix>)]`
or  `#[ref_unit(<ident>, "<symbol>", "<doc>")]`
or  `#[ref_unit(<ident>, "<symbol>")]`.

  --> tests/ui/wrong_number_of_args_ref_unit.rs:14:1
   |
14 | #[ref_unit(A, "a", MEGA, 1.0)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
